--- a/SRC/Gitblazor.UI/Components/Sidebar.razor
+++ b/SRC/Gitblazor.UI/Components/Sidebar.razor
@@ -26,15 +26,9 @@
 
 <aside class="shadow-2xl fixed bottom-0 lg:top-0 left-0 z-40 w-screen h-min lg:h-screen lg:w-16 bg-violet-700 transform translate-y-0">
     <nav class="flex justify-center lg:justify-start lg:flex-col">
-        <div class="flex items-center">
+        <div class="flex justify-center">
             <img src=@state.user.avatar_url class="w-12 h-12 rounded-full" alt="My Happy SVG" />
         </div>
-        @foreach (var item in SidebarNavigation.NavigationItems)
-        {
-            <div>
-                <NavItem Text=@item.Name Route=@item.Route IconName=@item.Icon />
-            </div>
-        }
     </nav>
 </aside>
 
