--- a/SRC/Gitblazor.UI/_Imports.razor
+++ b/SRC/Gitblazor.UI/_Imports.razor
@@ -7,7 +7,12 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using Gitblazor.UI
+@using Gitblazor.UI.Models;
+@using Gitblazor.UI.Routing;
+@using Gitblazor.UI.Styles;
 @using Gitblazor.UI.Components
+@using Gitblazor.UI.Layout
+@using Gitblazor.UI.Services;
 @using Gitblazor.UI.Pages
 @using Gitblazor.Shared.Models
 @using Blazor3D.Viewers;
