--- a/SRC/Gitblazor.UI/Pages/Index.razor
+++ b/SRC/Gitblazor.UI/Pages/Index.razor
@@ -5,6 +5,7 @@
 @inject ISnackbar Snackbar;
 @using Blazor3D.Cameras;
 @using Blazor3D.Controls;
+@using Blazor3D.Events;
 @using Blazor3D.Geometires;
 @using Blazor3D.Lights;
 @using Blazor3D.Materials;
@@ -52,20 +53,20 @@
         <h3 class="font-extrabold text-base">Activity</h3>
         <div class="h-1 w-full bg-gradient-to-r from-violet-700 to-gray-50"></div>
         <div class="flex flex-row">
-            <div class="w-1/2">
-                <Viewer @ref="View3D1" Scene=@scene Camera="@controls" />
+            <div class="w-3/4">
+                <Viewer @ref="View3D1" ViewerSettings="@settings" Scene=@scene Camera="@controls" />
             </div>
             <div>
-                <MudTimeline>
+                <MudTimeline SelectedIndexChanged="OnSelectYear">
                     @foreach (var year in years)
                     {
-                        <button @onclick="async () =>await  OnSelectYear(year)">
-                            <MudTimelineItem Color="year == selectedYear ? Color.Primary : Color.Default">
-                                <MudText>@year</MudText>
-                            </MudTimelineItem>
-                        </button>
+                        <MudTimelineItem Color="year == selectedYear ? Color.Primary : Color.Default">
+                            <MudText>@year</MudText>
+                        </MudTimelineItem>
                     }
                 </MudTimeline>
+                <p>Contributions on Day</p>
+                <p>@currentDay.contributionCount</p>
             </div>
         </div>
     </div>
@@ -78,22 +79,24 @@
     private List<Week> overallContributions = new List<Week>();
     private PerspectiveCamera controls = new PerspectiveCamera();
     private Viewer View3D1 = null!;
-    private Guid objGuid;
+    List<Guid> KnownGuids = new List<Guid>();
+
+    private ContributionDay currentDay = new ContributionDay();
     private int selectedYear = DateTime.UtcNow.Year;
     private ViewerSettings settings = new ViewerSettings()
         {
             ContainerId = "example1",
+            CanSelect = true,
+            CanSelectHelpers = false
         };
 
-    public async Task Show()
-    {
-        await View3D1.ShowCurrentCameraInfo();
-    }
     private Scene scene = new Scene();
 
     public async Task OnSelectYear(int year)
     {
-        selectedYear = year;
+        KnownGuids = new List<Guid>();
+        selectedYear = years[year];
+        overallContributions = await GetContributionCallendar();
         currentContributions = overallContributions.Where(x => x.contributionDays.Select(x => x.date).Any(x => x.Year == selectedYear)).ToList();
 
         float weekNr = 0;
@@ -134,7 +137,10 @@
                                 Z = dayNr
                             }
                         };
+
                     scene.Add(mesh);
+                    day.Id = mesh.Uuid;
+                    KnownGuids.Add(mesh.Uuid);
                     dayNr += 2.4f;
                 }
                 weekNr += 2.4f;
@@ -143,7 +149,6 @@
 
             controls.LookAt = new Vector3(currentContributions.Count + 3, 1, 3);
             controls.Position = new Vector3(currentContributions.Count + 3, currentContributions.Count - 2, 22);
-
             await View3D1.UpdateScene();
             await View3D1.UpdateCamera(controls);
         }
@@ -154,8 +159,16 @@
         await View3D1.UpdateScene();
     }
 
+    private void SelectObject(Object3DArgs e)
+    {
+        currentDay = currentContributions.SelectMany(x => x.contributionDays).FirstOrDefault(x => x.Id == e.UUID);
+        var contains = KnownGuids.Contains(e.UUID);
+        StateHasChanged();
+    }
+
     protected override async Task OnInitializedAsync()
     {
+        KnownGuids = new List<Guid>();
         try
         {
             scene.BackGroundColor = "#f9fafb";
@@ -165,7 +178,7 @@
                 });
 
 
-            overallContributions = await GetContributions();
+            overallContributions = await GetContributionCallendar();
             currentContributions = overallContributions.Where(x => x.contributionDays.Select(x => x.date).Any(x => x.Year == selectedYear)).ToList();
             float weekNr = 0;
             foreach (var week in currentContributions)
@@ -194,13 +207,15 @@
                             }
                         };
                     scene.Add(mesh);
+                    day.Id = mesh.Uuid;
+                    KnownGuids.Add(mesh.Uuid);
                     dayNr += 2.4f;
                 }
                 weekNr += 2.4f;
             }
 
             controls.LookAt = new Vector3(currentContributions.Count + 3, 1, 3);
-            controls.Position = new Vector3(currentContributions.Count+3, currentContributions.Count-2, 22);
+            controls.Position = new Vector3(currentContributions.Count + 3, currentContributions.Count - 2, 22);
 
             await View3D1.UpdateScene();
             await View3D1.UpdateCamera(controls);
@@ -217,6 +232,11 @@
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         await GetUserRepos();
+
+        if (firstRender)
+        {
+            View3D1.ObjectSelected += SelectObject;
+        }
 
         base.OnAfterRenderAsync(firstRender);
     }
@@ -247,7 +267,7 @@
         }
     }
 
-    async Task<List<Week>> GetContributions()
+    async Task<List<Week>> GetContributionCallendar()
     {
         var token = state.GetToken();
 
@@ -258,7 +278,7 @@
                 Query = @"
                  query {
                  user(login: @USERNAME) {
-                   contributionsCollection {
+                   contributionsCollection(from: @FROM, to: @TO) {
                 contributionYears
                 contributionCalendar {
                   totalContributions
@@ -275,7 +295,8 @@
                 }
                 }
                 }
-                ".Replace("@USERNAME", $"\"{state.user.login}\"")
+                ".Replace("@USERNAME", $"\"{state.user.login}\"").Replace("@FROM", $"\"{new DateTime(selectedYear, 1, 1).ToString("s") + "Z"}\"").Replace("@TO", $"\"{new DateTime(selectedYear + 1, 1, 1).AddDays(-1).ToString("s") + "Z"}\"")
+
             };
 
         var result = await graphQLClient.SendQueryAsync<Data>(userRequest);
