--- a/SRC/Gitblazor.UI/Pages/Index.razor
+++ b/SRC/Gitblazor.UI/Pages/Index.razor
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="basis-3/4 bg-gray-50">
-            <h3 class="font-extrabold text-base">Contributions</h3>
+            <h3 class="font-extrabold text-base">Repositories</h3>
             <div class="h-1 w-full bg-gradient-to-r from-violet-700 to-gray-50 mb-2"></div>
             <div class="flex w-full flex-wrap overflow-auto h-64">
                 @foreach (var model in repositories)
@@ -53,20 +53,20 @@
         <h3 class="font-extrabold text-base">Activity</h3>
         <div class="h-1 w-full bg-gradient-to-r from-violet-700 to-gray-50"></div>
         <div class="flex flex-row">
-            <div class="w-3/4">
+            <div class="w-3/5">
                 <Viewer @ref="View3D1" ViewerSettings="@settings" Scene=@scene Camera="@controls" />
             </div>
-            <div>
-                <MudTimeline SelectedIndexChanged="OnSelectYear">
-                    @foreach (var year in years)
-                    {
-                        <MudTimelineItem Color="year == selectedYear ? Color.Primary : Color.Default">
-                            <MudText>@year</MudText>
-                        </MudTimelineItem>
-                    }
-                </MudTimeline>
-                <p>Contributions on Day</p>
-                <p>@currentDay.contributionCount</p>
+            <div class="w-2/5 flex flex-row justify-center">
+                <div class="w-44 flex flex-col justify-center">
+                    <MudTimeline SelectedIndexChanged="OnSelectYear">
+                        @foreach (var year in years)
+                        {
+                            <MudTimelineItem Variant="Variant.Filled" Color="year == selectedYear ? Color.Primary : Color.Default">
+                                <MudText>@year</MudText>
+                            </MudTimelineItem>
+                        }
+                    </MudTimeline>
+                </div>
             </div>
         </div>
     </div>
@@ -103,7 +103,7 @@
         scene = new Scene();
         controls.LookAt = new Vector3(19, 1, 3);
         controls.Position = new Vector3(19, 16, 22);
-
+        
         scene.BackGroundColor = "#f9fafb";
         scene.Add(new AmbientLight()
             {
@@ -147,10 +147,11 @@
             }
 
 
-            controls.LookAt = new Vector3(currentContributions.Count + 3, 1, 3);
-            controls.Position = new Vector3(currentContributions.Count + 3, currentContributions.Count - 2, 22);
+            controls.LookAt = new Vector3(currentContributions.Count + 9, 0, 3);
+            controls.Position = new Vector3(currentContributions.Count + 9, currentContributions.Count-17, 40);
             await View3D1.UpdateScene();
             await View3D1.UpdateCamera(controls);
+            StateHasChanged();
         }
         catch (Exception ex)
         {
@@ -213,9 +214,9 @@
                 }
                 weekNr += 2.4f;
             }
-
-            controls.LookAt = new Vector3(currentContributions.Count + 3, 1, 3);
-            controls.Position = new Vector3(currentContributions.Count + 3, currentContributions.Count - 2, 22);
+            
+            controls.LookAt = new Vector3(currentContributions.Count + 9, 0, 3);
+            controls.Position = new Vector3(currentContributions.Count + 9, currentContributions.Count - 17, 40);
 
             await View3D1.UpdateScene();
             await View3D1.UpdateCamera(controls);
