--- a/SRC/Gitblazor.UI/wwwroot/css/app.css
+++ b/SRC/Gitblazor.UI/wwwroot/css/app.css
@@ -640,10 +640,6 @@ video {
   height: 100vh;
 }
 
-.w-1\/4 {
-  width: 25%;
-}
-
 .w-12 {
   width: 3rem;
 }
@@ -654,6 +650,10 @@ video {
 
 .w-20 {
   width: 5rem;
+}
+
+.w-3\/5 {
+  width: 60%;
 }
 
 .w-36 {
@@ -682,8 +682,28 @@ video {
   width: 100vw;
 }
 
-.w-3\/4 {
-  width: 75%;
+.w-24 {
+  width: 6rem;
+}
+
+.w-60 {
+  width: 15rem;
+}
+
+.w-52 {
+  width: 13rem;
+}
+
+.w-48 {
+  width: 12rem;
+}
+
+.w-44 {
+  width: 11rem;
+}
+
+.w-2\/5 {
+  width: 40%;
 }
 
 .flex-grow {
